--- a/ansible/vars/default.yml
+++ b/ansible/vars/default.yml
@@ -3,8 +3,9 @@
 default_user: lfilipevm
 default_container_name: project-movie-infographic-api
 default_container_image: pdisec2122/project-movie-infographic-api:latest
+# docker
+docker_network: moviefetchernetwork
 # mysql
-mysql_network: mysqlnetwork
 mysql_container_name: mysqldb
 mysql_container_image: mysql:8
 mysql_container_username: movie_app
